SERV-482: Updated docker and base template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
             <div class="row" style="height: 60px;">
                 <div class="col-12 text-center">
                     {% set logo = {
-                    url: context.data.logo|default('https://ereolen.dk/sites/all/themes/orwell/svg/eReolen_Logo.svg'),
+                    url: context.data.logo|default('https://raw.githubusercontent.com/eReolen/base/develop/sites/all/themes/orwell/assets/svg/eReolen-Red.svg'),
                     label: context.data.label|default('eReolen'),
                     }
                     %}
